--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
 </head>
 
 <body>
+  <div class="screen">
+    <div class="leftside">
+      <img src="images/financial_data.png" alt="formulario">
+    </div>
+    <div class="rightside">
+      <h1>Crie uma conta</h1>
+      <form method="post">
+        <label>
+          Seu nome:<br />
+          <input type="text" name="name">
+        </label>
+        <label>
+          Seu e-mail:<br />
+          <input type="text" name="email">
+        </label>
+        <label>
+          Sua senha:<br />
+          <input type="password" name="password">
+        </label>
+        <label>
+          <input type="submit" value="Cadastrar">
+        </label>
+      </form>
+
+      <div>
+        Já tem uma conta? <a href="">Faça o Login</a>
+      </div>
+    </div>
+  </div>
   <script src="assets/js/script.js"></script>
 </body>
 
