--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <form method="post" action="cadastro.php" class="b7validator">
         <label>
           Seu nome:<br />
-          <input type="text" name="name" data-rules="required|">
+          <input type="text" name="name" data-rules="required">
         </label>
         <label>
           Seu e-mail:<br />
-          <input type="text" name="email">
+          <input type="text" name="email" data-rules="required">
         </label>
         <label>
           Sua senha:<br />
