--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </label>
         <label>
           Sua senha:<br />
-          <input type="password" name="password">
+          <input type="password" name="password" data-rules="required|min=4">
         </label>
         <label>
           <input type="submit" value="Cadastrar">
